--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,48 +20,16 @@ div:hover {
   background-color: gold;
 }
 
-div#colonne1 {
-	float: left;
-	width: 30%;
-	background: navy;
-  color: grey;
+footer {
+  background-color: gold;
+  color: navy;
+  display: flex;
+  justify-content: space-around;
 }
 
 @media all and (max-width: 740px) {
-  div#colonne1 {
-    float: left;
-    width: 150px;
-    background-color: navy;
-  }
-}
-
-div#colonne2 {
-	float: left;
-	width: 30%;
-	background: blue;
-  color: grey;
-}
-
-@media all and (max-width: 740px) {
-  div#colonne2 {
-    float: left;
-    width: 150px;
-    background-color: blue;
-  }
-}
-
-
-div#colonne3 {
-	float: left;
-	width: 30%;
-	background: lightblue;
-  color: grey;
-}
-
-@media all and (max-width: 740px) {
-  div#colonne3 {
-    float: left;
-    width: 150px;
-    background-color: grey;
+  footer {
+    flex-direction: column;
+    font-size: 4em;
   }
 }
